[package]
name = "oya-workflow"
version = "0.1.0"
edition = "2021"
description = "Intra-bead workflow engine with checkpoints, rewind, and journal replay"
license = "MIT"

[dependencies]
# Workspace dependencies
oya-core = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["sync", "time"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Time
chrono = { workspace = true, features = ["serde"] }

# IDs
ulid = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v5", "serde"] }

# Error handling
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

# Database
surrealdb = { workspace = true }
surrealdb-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints.clippy]
unwrap_used = "forbid"
expect_used = "deny"
panic = "forbid"
