[package]
name = "oya-workflow"
version = "0.1.0"
edition = "2021"
description = "Intra-bead workflow engine with checkpoints, rewind, and journal replay"
license = "MIT"

[dependencies]
# Workspace dependencies
oya-core = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["sync", "time"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bincode = { workspace = true }

# Cryptography
sha2 = { workspace = true }

# Time
chrono = { workspace = true, features = ["serde"] }

# IDs
ulid = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v5", "serde"] }

# Error handling
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

# Database
surrealdb = { workspace = true }
surrealdb-core = { workspace = true }

# Compression
zstd = { workspace = true }

# Persistent data structures
im = "15.1"

# Functional utilities
itertools = { workspace = true }

# Caching
moka = { workspace = true }

[dev-dependencies]
oya-events = { path = "../events" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
proptest = "1"
criterion = "0.5"
rand = "0.8"

[lints.clippy]
unwrap_used = "forbid"
expect_used = "deny"
panic = "forbid"

[[bench]]
name = "loop_vs_iterator"
harness = false

[[bench]]
name = "clone_vs_arc"
harness = false

[[bench]]
name = "hashmap_vs_im"
harness = false

[[bench]]
name = "error_handling"
harness = false

[[bench]]
name = "vec_operations"
harness = false
